--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "method-override": "^3.0.0",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
